--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -28,5 +27,6 @@
   },
   "devDependencies": {
     "webpack-dev-server": "^1.9.0"
-  }
+  },
+  "description": ""
 }
