--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "bootstrap-sass": "^3.3.7",
     "clipboard": "^1.6.0",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
@@ -26,7 +28,14 @@
     "webpack-dev-server": "^1.16.3"
   },
   "devDependencies": {
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
+    "webpack": "^1.15.0",
     "webpack-dev-server": "^1.9.0"
   },
-  "description": ""
+  "description": "",
+  "peerDependencies": {
+    "node-sass": "^4.5.2",
+    "webpack": "^1.15.0"
+  }
 }
