--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "tooltipster": "^4.2.5"
   },
   "devDependencies": {
     "css-loader": "^0.28.0",
